src/index.css
@import "tailwindcss";
@import "tw-animate-css";
@import "shadcn/tailwind.css";
@import "@fontsource-variable/geist";

@custom-variant dark (&:is(.dark *));

@theme inline {
    --font-heading: var(--font-sans);
    --font-sans: 'Geist Variable', sans-serif;
    --color-sidebar-ring: var(--sidebar-ring);
    --color-sidebar-border: var(--sidebar-border);
    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
    --color-sidebar-accent: var(--sidebar-accent);
    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
    --color-sidebar-primary: var(--sidebar-primary);
    --color-sidebar-foreground: var(--sidebar-foreground);
    --color-sidebar: var(--sidebar);
    --color-chart-5: var(--chart-5);
    --color-chart-4: var(--chart-4);
    --color-chart-3: var(--chart-3);
    --color-chart-2: var(--chart-2);
    --color-chart-1: var(--chart-1);
    --color-ring: var(--ring);
    --color-input: var(--input);
    --color-border: var(--border);
    --color-destructive: var(--destructive);
    --color-accent-foreground: var(--accent-foreground);
    --color-accent: var(--accent);
    --color-muted-foreground: var(--muted-foreground);
    --color-muted: var(--muted);
    --color-secondary-foreground: var(--secondary-foreground);
    --color-secondary: var(--secondary);
    --color-primary-foreground: var(--primary-foreground);
    --color-primary: var(--primary);
    --color-popover-foreground: var(--popover-foreground);
    --color-popover: var(--popover);
    --color-card-foreground: var(--card-foreground);
    --color-card: var(--card);
    --color-foreground: var(--foreground);
    --color-background: var(--background);
    --radius-sm: calc(var(--radius) * 0.6);
    --radius-md: calc(var(--radius) * 0.8);
    --radius-lg: var(--radius);
    --radius-xl: calc(var(--radius) * 1.4);
    --radius-2xl: calc(var(--radius) * 1.8);
    --radius-3xl: calc(var(--radius) * 2.2);
    --radius-4xl: calc(var(--radius) * 2.6);
}

:root {
    --background: #ffffff;
    --foreground: #252525;
    --card: #ffffff;
    --card-foreground: #252525;
    --popover: #ffffff;
    --popover-foreground: #252525;
    --primary: #343434;
    --primary-foreground: #fafafa;
    --secondary: #f7f7f7;
    --secondary-foreground: #343434;
    --muted: #f7f7f7;
    --muted-foreground: #8e8e8e;
    --accent: #f7f7f7;
    --accent-foreground: #343434;
    --destructive: #c7171e;
    --border: #e2e8f0;
    --input: #e2e8f0;
    --ring: #b5b5b5;
    --chart-1: #dfdfdf;
    --chart-2: #8e8e8e;
    --chart-3: #707070;
    --chart-4: #5e5e5e;
    --chart-5: #454545;
    --radius: 0.625rem;
    --sidebar: #fafafa;
    --sidebar-foreground: #252525;
    --sidebar-primary: #343434;
    --sidebar-primary-foreground: #fafafa;
    --sidebar-accent: #f7f7f7;
    --sidebar-accent-foreground: #343434;
    --sidebar-border: #ebebeb;
    --sidebar-ring: #b5b5b5;
}

.dark {
    --background: #252525;
    --foreground: #fafafa;
    --card: #343434;
    --card-foreground: #fafafa;
    --popover: #343434;
    --popover-foreground: #fafafa;
    --primary: #ebebeb;
    --primary-foreground: #343434;
    --secondary: #454545;
    --secondary-foreground: #fafafa;
    --muted: #454545;
    --muted-foreground: #b5b5b5;
    --accent: #454545;
    --accent-foreground: #fafafa;
    --destructive: #df4444;
    --border: rgba(255, 255, 255, 0.1);
    --input: rgba(255, 255, 255, 0.15);
    --ring: #8e8e8e;
    --chart-1: #dfdfdf;
    --chart-2: #8e8e8e;
    --chart-3: #707070;
    --chart-4: #5e5e5e;
    --chart-5: #454545;
    --sidebar: #343434;
    --sidebar-foreground: #fafafa;
    --sidebar-primary: #3b82f6;
    --sidebar-primary-foreground: #fafafa;
    --sidebar-accent: #454545;
    --sidebar-accent-foreground: #fafafa;
    --sidebar-border: rgba(255, 255, 255, 0.1);
    --sidebar-ring: #8e8e8e;
}

@layer base {
  * {
    @apply border-border outline-ring/50;
    }
  body {
    @apply bg-background text-foreground;
    }
  html {
    @apply font-sans;
    font-size: 80%;
    }
}

@layer utilities {
  .scrollbar-thin-visible::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    display: block !important;
  }
  .scrollbar-thin-visible::-webkit-scrollbar-track {
    background: #f1f5f9;
    border-radius: 10px;
  }
  .scrollbar-thin-visible::-webkit-scrollbar-thumb {
    background: #94a3b8;
    border-radius: 10px;
    border: 1px solid #f1f5f9;
  }
  .scrollbar-thin-visible::-webkit-scrollbar-thumb:hover {
    background: #64748b;
  }
}

